Breeding Mechanism done, Mutate not

--- a/GA_jaringan_kapal_revisi.ipynb
+++ b/GA_jaringan_kapal_revisi.ipynb
@@ -1498,10 +1498,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def breed(parent1,parent2):\n",
+    "    childP1 = parent1.copy()\n",
+    "    childP2 = parent2.copy()\n",
+    "\n",
+    "    key = list(childP1.keys())\n",
+    "\n",
+    "    flags = []\n",
+    "    for i in range(len(parent1)):\n",
+    "        flags.append(bool(random.getrandbits(1)))\n",
+    "\n",
+    "    for i in range(len(flags)):\n",
+    "        if flags[i] == True:\n",
+    "            childP1[key[i]],childP2[key[i]] = childP2[key[i]],childP1[key[i]]\n",
+    "\n",
+    "    child = random.choice([childP1,childP2])\n",
+    "    return child\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def breedPopulation(matingpool, eliteSize):\n",
+    "    children = []\n",
+    "    length = len(matingpool) - eliteSize\n",
+    "    pool = random.sample(matingpool, len(matingpool))\n",
+    "\n",
+    "    for i in range(0,eliteSize):\n",
+    "        children.append(matingpool[i])\n",
+    "    \n",
+    "    for i in range(0, length):\n",
+    "        child = breed(pool[i], pool[len(matingpool)-i-1])\n",
+    "        children.append(child)\n",
+    "    return children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mutate(individual, mutationRate):\n",
+    "    for swapped in range(len(individual)):\n",
+    "        if(random.random() < mutationRate):\n",
+    "            swapWith = int(random.random() * len(individual))\n",
+    "            \n",
+    "            city1 = individual[swapped]\n",
+    "            city2 = individual[swapWith]\n",
+    "            \n",
+    "            individual[swapped] = city2\n",
+    "            individual[swapWith] = city1\n",
+    "    return individual"
+   ]
   },
   {
    "cell_type": "code",
@@ -44999,16 +45057,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "analyse_simulation(remaining_history,revenue_history)"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45018,46 +45085,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "child = []\n",
-    "childP1 = []\n",
-    "childP2 = []\n",
-    "\n",
-    "geneA = int(random.random() * len(parent1))\n",
-    "geneB = int(random.random() * len(parent1))\n",
-    "\n",
-    "startGene = min(geneA, geneB)\n",
-    "endGene = max(geneA, geneB)\n",
-    "\n",
-    "for i in range(startGene, endGene):\n",
-    "    childP1.append(parent1[i])\n",
-    "\n",
-    "childP2 = [item for item in parent2 if item not in childP1]\n",
-    "\n",
-    "child = childP1 + childP2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "{'TL1': [Utama:Tanjung Perak,\n",
+       "  Pengumpul:Kisar,\n",
+       "  Pengumpan:Werinama,\n",
+       "  Pengumpan:Leksula,\n",
+       "  Pengumpan:Eray,\n",
+       "  Pengumpan:Marsela,\n",
+       "  Pengumpan:Taniwel,\n",
+       "  Pengumpul:Ambon,\n",
+       "  Pengumpan:Kisar1,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpan:Nila,\n",
+       "  Pengumpan:Bebar,\n",
+       "  Pengumpan:Wulur,\n",
+       "  Pengumpan:Arwala/Sutilirang,\n",
+       "  Pengumpan:Amahai,\n",
+       "  Pengumpan:Adault/Lingat,\n",
+       "  Pengumpan:P.Geser,\n",
+       "  Pengumpul:Namrole,\n",
+       "  Pengumpan:Lakor,\n",
+       "  Pengumpul:Saumlaki,\n",
+       "  Pengumpan:Fogi,\n",
+       "  Pengumpan:Buano,\n",
+       "  Pengumpan:Bula,\n",
+       "  Pengumpan:Ilwaki,\n",
+       "  Pengumpan:Larat,\n",
+       "  Pengumpul:Namrole,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpan:Dawera/Dawelor,\n",
+       "  Pengumpul:Namlea,\n",
+       "  Pengumpul:Moa],\n",
+       " 'TL2': [Utama:Makassar,\n",
+       "  Pengumpan:Larat,\n",
+       "  Pengumpan:Ilwaki,\n",
+       "  Pengumpan:Lakor,\n",
+       "  Pengumpan:Fadol,\n",
+       "  Pengumpul:Banda Neira,\n",
+       "  Pengumpul:Namlea,\n",
+       "  Pengumpan:Eray,\n",
+       "  Pengumpul:Tual,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpan:Dawera/Dawelor,\n",
+       "  Pengumpan:Mangur,\n",
+       "  Pengumpan:P.Tior,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpan:Adault/Lingat,\n",
+       "  Pengumpan:Holat,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpan:Marsela,\n",
+       "  Pengumpan:Weduar,\n",
+       "  Pengumpan:Jerol,\n",
+       "  Pengumpan:Elat,\n",
+       "  Pengumpan:Nila,\n",
+       "  Pengumpan:Kailakat,\n",
+       "  Pengumpan:Kisar1,\n",
+       "  Pengumpan:Banda Eli,\n",
+       "  Pengumpan:Arwala/Sutilirang,\n",
+       "  Pengumpul:Saumlaki,\n",
+       "  Pengumpul:Kisar,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpan:Benjina,\n",
+       "  Pengumpan:Wulur,\n",
+       "  Pengumpan:Marlasi,\n",
+       "  Pengumpul:Namrole,\n",
+       "  Pengumpan:Meror,\n",
+       "  Pengumpan:Bebar],\n",
+       " 'PR_Ambon': [Pengumpul:Ambon,\n",
+       "  Pengumpan:Wahai,\n",
+       "  Pengumpan:Wamsisi,\n",
+       "  Pengumpan:Kobisadar,\n",
+       "  Pengumpan:Manipa,\n",
+       "  Pengumpan:Kelimuri,\n",
+       "  Pengumpan:Kelimoi,\n",
+       "  Pengumpan:Kelang,\n",
+       "  Pengumpan:Ambalau,\n",
+       "  Pengumpul:Namlea,\n",
+       "  Pengumpan:Waemulang,\n",
+       "  Pengumpan:Tifu],\n",
+       " 'PL1': [Utama:Tanjung Priok,\n",
+       "  Utama:Tanjung Perak,\n",
+       "  Pengumpul:Ambon,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpul:Tual,\n",
+       "  Pengumpul:Banda Neira,\n",
+       "  Pengumpul:Saumlaki,\n",
+       "  Utama:Makassar],\n",
+       " 'PR_Tual': [Pengumpul:Tual,\n",
+       "  Pengumpan:Longgar,\n",
+       "  Pengumpan:Kaimer,\n",
+       "  Pengumpan:Gorom,\n",
+       "  Pengumpan:Tabarfane,\n",
+       "  Pengumpan:P.Manawoka,\n",
+       "  Pengumpan:P.Kur,\n",
+       "  Pengumpan:Lelam Kojabi,\n",
+       "  Pengumpan:Mun,\n",
+       "  Pengumpan:Tam,\n",
+       "  Pengumpan:Toyando,\n",
+       "  Pengumpan:P.Kesui,\n",
+       "  Pengumpan:Kaisui],\n",
+       " 'PR_Saumlaki': [Pengumpul:Saumlaki,\n",
+       "  Pengumpan:Tutukembong,\n",
+       "  Pengumpan:P.Leti,\n",
+       "  Pengumpan:Serua,\n",
+       "  Pengumpan:Lelang,\n",
+       "  Pengumpan:P.Luang,\n",
+       "  Pengumpan:Molu,\n",
+       "  Pengumpan:Romang,\n",
+       "  Pengumpan:Rumean,\n",
+       "  Pengumpan:Sofyanin/Rumayaan,\n",
+       "  Pengumpan:Teon,\n",
+       "  Pengumpan:Wunlah,\n",
+       "  Pengumpan:Seira,\n",
+       "  Pengumpan:Tepa,\n",
+       "  Pengumpan:Nurkat,\n",
+       "  Pengumpan:Lewa/Dai,\n",
+       "  Pengumpan:Kroing,\n",
+       "  Pengumpul:Kisar]}"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(parent1)"
+    "breed(parent1,parent2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'TL1': [Utama:Tanjung Perak,\n",
+       "  Pengumpul:Kisar,\n",
+       "  Pengumpan:Werinama,\n",
+       "  Pengumpan:Leksula,\n",
+       "  Pengumpan:Eray,\n",
+       "  Pengumpan:Marsela,\n",
+       "  Pengumpan:Taniwel,\n",
+       "  Pengumpul:Ambon,\n",
+       "  Pengumpan:Kisar1,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpan:Nila,\n",
+       "  Pengumpan:Bebar,\n",
+       "  Pengumpan:Wulur,\n",
+       "  Pengumpan:Arwala/Sutilirang,\n",
+       "  Pengumpan:Amahai,\n",
+       "  Pengumpan:Adault/Lingat,\n",
+       "  Pengumpan:P.Geser,\n",
+       "  Pengumpul:Namrole,\n",
+       "  Pengumpan:Lakor,\n",
+       "  Pengumpul:Saumlaki,\n",
+       "  Pengumpan:Fogi,\n",
+       "  Pengumpan:Buano,\n",
+       "  Pengumpan:Bula,\n",
+       "  Pengumpan:Ilwaki,\n",
+       "  Pengumpan:Larat,\n",
+       "  Pengumpul:Namrole,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpan:Dawera/Dawelor,\n",
+       "  Pengumpul:Namlea,\n",
+       "  Pengumpul:Moa],\n",
+       " 'TL2': [Utama:Makassar,\n",
+       "  Pengumpan:Larat,\n",
+       "  Pengumpan:Ilwaki,\n",
+       "  Pengumpan:Lakor,\n",
+       "  Pengumpan:Fadol,\n",
+       "  Pengumpul:Banda Neira,\n",
+       "  Pengumpul:Namlea,\n",
+       "  Pengumpan:Eray,\n",
+       "  Pengumpul:Tual,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpan:Dawera/Dawelor,\n",
+       "  Pengumpan:Mangur,\n",
+       "  Pengumpan:P.Tior,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpan:Adault/Lingat,\n",
+       "  Pengumpan:Holat,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpan:Marsela,\n",
+       "  Pengumpan:Weduar,\n",
+       "  Pengumpan:Jerol,\n",
+       "  Pengumpan:Elat,\n",
+       "  Pengumpan:Nila,\n",
+       "  Pengumpan:Kailakat,\n",
+       "  Pengumpan:Kisar1,\n",
+       "  Pengumpan:Banda Eli,\n",
+       "  Pengumpan:Arwala/Sutilirang,\n",
+       "  Pengumpul:Saumlaki,\n",
+       "  Pengumpul:Kisar,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpan:Benjina,\n",
+       "  Pengumpan:Wulur,\n",
+       "  Pengumpan:Marlasi,\n",
+       "  Pengumpul:Namrole,\n",
+       "  Pengumpan:Meror,\n",
+       "  Pengumpan:Bebar],\n",
+       " 'PR_Ambon': [Pengumpul:Ambon,\n",
+       "  Pengumpan:Wahai,\n",
+       "  Pengumpul:Namlea,\n",
+       "  Pengumpan:Wamsisi,\n",
+       "  Pengumpan:Tifu,\n",
+       "  Pengumpan:Waemulang,\n",
+       "  Pengumpan:Kelimuri,\n",
+       "  Pengumpan:Ambalau,\n",
+       "  Pengumpan:Manipa,\n",
+       "  Pengumpan:Kelimoi,\n",
+       "  Pengumpan:Kobisadar,\n",
+       "  Pengumpan:Kelang],\n",
+       " 'PL1': [Utama:Tanjung Priok,\n",
+       "  Utama:Makassar,\n",
+       "  Pengumpul:Ambon,\n",
+       "  Pengumpul:Tual,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpul:Banda Neira,\n",
+       "  Pengumpul:Saumlaki,\n",
+       "  Utama:Tanjung Perak],\n",
+       " 'PR_Tual': [Pengumpul:Tual,\n",
+       "  Pengumpan:Longgar,\n",
+       "  Pengumpan:Kaimer,\n",
+       "  Pengumpan:Gorom,\n",
+       "  Pengumpan:Tabarfane,\n",
+       "  Pengumpan:P.Manawoka,\n",
+       "  Pengumpan:P.Kur,\n",
+       "  Pengumpan:Lelam Kojabi,\n",
+       "  Pengumpan:Mun,\n",
+       "  Pengumpan:Tam,\n",
+       "  Pengumpan:Toyando,\n",
+       "  Pengumpan:P.Kesui,\n",
+       "  Pengumpan:Kaisui],\n",
+       " 'PR_Saumlaki': [Pengumpul:Saumlaki,\n",
+       "  Pengumpan:Tepa,\n",
+       "  Pengumpan:Wunlah,\n",
+       "  Pengumpan:Lewa/Dai,\n",
+       "  Pengumpan:Molu,\n",
+       "  Pengumpan:Sofyanin/Rumayaan,\n",
+       "  Pengumpan:Rumean,\n",
+       "  Pengumpan:Lelang,\n",
+       "  Pengumpan:Serua,\n",
+       "  Pengumpul:Kisar,\n",
+       "  Pengumpan:Kroing,\n",
+       "  Pengumpan:P.Luang,\n",
+       "  Pengumpan:Tutukembong,\n",
+       "  Pengumpan:Teon,\n",
+       "  Pengumpan:Seira,\n",
+       "  Pengumpan:P.Leti,\n",
+       "  Pengumpan:Romang,\n",
+       "  Pengumpan:Nurkat]}"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "child = random.choice([childP1,childP2])\n",
+    "child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {'a':'aaa',\n",
+    "     'b':'bbb',\n",
+    "     'c':'ccc'}\n",
+    "b = {'a':'xxx',\n",
+    "     'b':'yyy',\n",
+    "     'c':'zzz'}\n",
+    "\n",
+    "key = list(a.keys())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c']"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key"
    ]
   },
   {
