saving best route(not tested)

--- a/GA_jaringan_kapal_revisi.ipynb
+++ b/GA_jaringan_kapal_revisi.ipynb
@@ -1674,10 +1674,10 @@
    "outputs": [],
    "source": [
     "ship_names = ship_df['Ship_Name'].to_list()\n",
-    "n_pop = 3\n",
-    "elite_n = 1\n",
+    "n_pop = 8\n",
+    "elite_n = 3\n",
     "mutationRate = 0.03\n",
-    "n_generation = 2\n",
+    "n_generation = 5\n",
     "pop = initial_population(ship_names, n_pop)\n",
     "# nextgen = nextGeneration(pop, elite_n, mutationRate,available_ship,ports)"
    ]
@@ -2281,384 +2281,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_this = pop[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('best_route_overall.npy', best_route_overall)\n",
+    "np.save('best_route_overall.npy', best_route_overall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'TL1': [Utama:Tanjung Perak,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpul:Namlea,\n",
-       "   Pengumpan:Ambalau,\n",
-       "   Pengumpan:Adault/Lingat,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpan:Kobisadar,\n",
-       "   Pengumpan:Kelang,\n",
-       "   Pengumpan:Kelimuri,\n",
-       "   Pengumpan:Kelimoi,\n",
-       "   Pengumpan:Tepa,\n",
-       "   Pengumpul:Namrole,\n",
-       "   Pengumpan:Teon,\n",
-       "   Pengumpan:Bebar,\n",
-       "   Pengumpul:Namlea,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpul:Ambon,\n",
-       "   Pengumpan:Tifu,\n",
-       "   Pengumpan:Buano,\n",
-       "   Pengumpan:P.Geser,\n",
-       "   Pengumpan:Ilwaki,\n",
-       "   Pengumpan:Marsela,\n",
-       "   Pengumpan:Molu,\n",
-       "   Pengumpul:Namrole,\n",
-       "   Pengumpul:Saumlaki,\n",
-       "   Pengumpan:Kroing,\n",
-       "   Pengumpan:Arwala/Sutilirang,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpan:Amahai],\n",
-       "  'TL2': [Utama:Makassar,\n",
-       "   Pengumpan:Meror,\n",
-       "   Pengumpan:Ilwaki,\n",
-       "   Pengumpan:Arwala/Sutilirang,\n",
-       "   Pengumpan:Adault/Lingat,\n",
-       "   Pengumpan:P.Manawoka,\n",
-       "   Pengumpan:Tabarfane,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpan:Gorom,\n",
-       "   Pengumpan:Longgar,\n",
-       "   Pengumpan:Tepa,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpan:Marsela,\n",
-       "   Pengumpan:Jerol,\n",
-       "   Pengumpul:Namrole,\n",
-       "   Pengumpan:Teon,\n",
-       "   Pengumpan:Mun,\n",
-       "   Pengumpan:Toyando,\n",
-       "   Pengumpan:Elat,\n",
-       "   Pengumpan:Mangur,\n",
-       "   Pengumpan:Bebar,\n",
-       "   Pengumpan:Banda Eli,\n",
-       "   Pengumpan:Kroing,\n",
-       "   Pengumpul:Saumlaki,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Pengumpan:Kaimer,\n",
-       "   Pengumpan:Weduar,\n",
-       "   Pengumpan:Lelam Kojabi,\n",
-       "   Pengumpul:Tual,\n",
-       "   Pengumpan:Fadol,\n",
-       "   Pengumpul:Namlea,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpul:Banda Neira,\n",
-       "   Pengumpan:Molu,\n",
-       "   Pengumpan:Marlasi],\n",
-       "  'PR_Ambon': [Pengumpul:Ambon,\n",
-       "   Pengumpan:Werinama,\n",
-       "   Pengumpan:Waemulang,\n",
-       "   Pengumpan:Leksula,\n",
-       "   Pengumpan:Bula,\n",
-       "   Pengumpan:Wamsisi,\n",
-       "   Pengumpan:Wahai,\n",
-       "   Pengumpan:Fogi,\n",
-       "   Pengumpan:Taniwel,\n",
-       "   Pengumpan:Manipa],\n",
-       "  'PL1': [Utama:Tanjung Priok,\n",
-       "   Pengumpul:Tual,\n",
-       "   Utama:Tanjung Perak,\n",
-       "   Pengumpul:Banda Neira,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Pengumpul:Ambon,\n",
-       "   Pengumpul:Saumlaki,\n",
-       "   Utama:Makassar],\n",
-       "  'PR_Tual': [Pengumpul:Tual,\n",
-       "   Pengumpan:Holat,\n",
-       "   Pengumpan:Kailakat,\n",
-       "   Pengumpan:Benjina,\n",
-       "   Pengumpan:Kaisui,\n",
-       "   Pengumpan:P.Tior,\n",
-       "   Pengumpan:Tam,\n",
-       "   Pengumpan:P.Kesui,\n",
-       "   Pengumpan:P.Kur,\n",
-       "   Pengumpul:Dobo],\n",
-       "  'PR_Saumlaki': [Pengumpul:Saumlaki,\n",
-       "   Pengumpan:Eray,\n",
-       "   Pengumpan:Wunlah,\n",
-       "   Pengumpan:Sofyanin/Rumayaan,\n",
-       "   Pengumpan:Serua,\n",
-       "   Pengumpan:Nila,\n",
-       "   Pengumpan:Lelang,\n",
-       "   Pengumpan:Kisar1,\n",
-       "   Pengumpan:Lakor,\n",
-       "   Pengumpan:Nurkat,\n",
-       "   Pengumpan:P.Leti,\n",
-       "   Pengumpan:Tutukembong,\n",
-       "   Pengumpan:Seira,\n",
-       "   Pengumpan:Wulur,\n",
-       "   Pengumpan:Lewa/Dai,\n",
-       "   Pengumpan:Larat,\n",
-       "   Pengumpan:Dawera/Dawelor,\n",
-       "   Pengumpan:P.Luang,\n",
-       "   Pengumpan:Rumean,\n",
-       "   Pengumpan:Romang]},\n",
-       " {'TL1': [Utama:Tanjung Perak,\n",
-       "   Pengumpan:Molu,\n",
-       "   Pengumpan:Marsela,\n",
-       "   Pengumpul:Namlea,\n",
-       "   Pengumpan:Kroing,\n",
-       "   Pengumpul:Namrole,\n",
-       "   Pengumpan:P.Geser,\n",
-       "   Pengumpul:Saumlaki,\n",
-       "   Pengumpan:Kobisadar,\n",
-       "   Pengumpul:Ambon,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpan:Teon,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpan:Ilwaki,\n",
-       "   Pengumpan:Buano,\n",
-       "   Pengumpul:Namlea,\n",
-       "   Pengumpan:Kelimoi,\n",
-       "   Pengumpan:Kelang,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpul:Namrole,\n",
-       "   Pengumpan:Kelimuri,\n",
-       "   Pengumpan:Arwala/Sutilirang,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpan:Adault/Lingat,\n",
-       "   Pengumpan:Bebar,\n",
-       "   Pengumpan:Ambalau,\n",
-       "   Pengumpan:Tepa,\n",
-       "   Pengumpan:Tifu,\n",
-       "   Pengumpan:Amahai],\n",
-       "  'TL2': [Utama:Makassar,\n",
-       "   Pengumpan:Arwala/Sutilirang,\n",
-       "   Pengumpan:Longgar,\n",
-       "   Pengumpan:Toyando,\n",
-       "   Pengumpan:P.Manawoka,\n",
-       "   Pengumpan:Adault/Lingat,\n",
-       "   Pengumpan:Ilwaki,\n",
-       "   Pengumpan:Mangur,\n",
-       "   Pengumpul:Tual,\n",
-       "   Pengumpan:Fadol,\n",
-       "   Pengumpan:Gorom,\n",
-       "   Pengumpan:Banda Eli,\n",
-       "   Pengumpan:Meror,\n",
-       "   Pengumpan:Kroing,\n",
-       "   Pengumpan:Molu,\n",
-       "   Pengumpan:Bebar,\n",
-       "   Pengumpul:Banda Neira,\n",
-       "   Pengumpan:Kaimer,\n",
-       "   Pengumpan:Mun,\n",
-       "   Pengumpan:Elat,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpan:Tabarfane,\n",
-       "   Pengumpan:Lelam Kojabi,\n",
-       "   Pengumpan:Weduar,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Pengumpan:Teon,\n",
-       "   Pengumpul:Namlea,\n",
-       "   Pengumpan:Tepa,\n",
-       "   Pengumpan:Marlasi,\n",
-       "   Pengumpan:Jerol,\n",
-       "   Pengumpan:Marsela,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpul:Namrole,\n",
-       "   Pengumpul:Saumlaki],\n",
-       "  'PR_Ambon': [Pengumpul:Ambon,\n",
-       "   Pengumpan:Werinama,\n",
-       "   Pengumpan:Taniwel,\n",
-       "   Pengumpan:Leksula,\n",
-       "   Pengumpan:Fogi,\n",
-       "   Pengumpan:Bula,\n",
-       "   Pengumpan:Wamsisi,\n",
-       "   Pengumpan:Wahai,\n",
-       "   Pengumpan:Waemulang,\n",
-       "   Pengumpan:Manipa],\n",
-       "  'PL1': [Utama:Tanjung Priok,\n",
-       "   Pengumpul:Saumlaki,\n",
-       "   Pengumpul:Ambon,\n",
-       "   Pengumpul:Tual,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Utama:Tanjung Perak,\n",
-       "   Pengumpul:Banda Neira,\n",
-       "   Utama:Makassar],\n",
-       "  'PR_Tual': [Pengumpul:Tual,\n",
-       "   Pengumpan:Benjina,\n",
-       "   Pengumpan:P.Kesui,\n",
-       "   Pengumpan:Kailakat,\n",
-       "   Pengumpan:P.Kur,\n",
-       "   Pengumpan:Holat,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Pengumpan:P.Tior,\n",
-       "   Pengumpan:Kaisui,\n",
-       "   Pengumpan:Tam],\n",
-       "  'PR_Saumlaki': [Pengumpul:Saumlaki,\n",
-       "   Pengumpan:Lakor,\n",
-       "   Pengumpan:Sofyanin/Rumayaan,\n",
-       "   Pengumpan:Larat,\n",
-       "   Pengumpan:Lewa/Dai,\n",
-       "   Pengumpan:Lelang,\n",
-       "   Pengumpan:Tutukembong,\n",
-       "   Pengumpan:Wulur,\n",
-       "   Pengumpan:P.Leti,\n",
-       "   Pengumpan:P.Luang,\n",
-       "   Pengumpan:Eray,\n",
-       "   Pengumpan:Rumean,\n",
-       "   Pengumpan:Kisar1,\n",
-       "   Pengumpan:Serua,\n",
-       "   Pengumpan:Nila,\n",
-       "   Pengumpan:Wunlah,\n",
-       "   Pengumpan:Dawera/Dawelor,\n",
-       "   Pengumpan:Nurkat,\n",
-       "   Pengumpan:Seira,\n",
-       "   Pengumpan:Romang]},\n",
-       " {'TL1': [Utama:Tanjung Perak,\n",
-       "   Pengumpan:Kelang,\n",
-       "   Pengumpan:Marsela,\n",
-       "   Pengumpan:Ilwaki,\n",
-       "   Pengumpan:Kobisadar,\n",
-       "   Pengumpan:Kroing,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpan:Molu,\n",
-       "   Pengumpan:Teon,\n",
-       "   Pengumpan:P.Geser,\n",
-       "   Pengumpan:Ambalau,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpan:Kelimuri,\n",
-       "   Pengumpan:Arwala/Sutilirang,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpan:Tifu,\n",
-       "   Pengumpul:Namrole,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Pengumpul:Namrole,\n",
-       "   Pengumpul:Ambon,\n",
-       "   Pengumpan:Adault/Lingat,\n",
-       "   Pengumpan:Tepa,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpul:Namlea,\n",
-       "   Pengumpul:Namlea,\n",
-       "   Pengumpul:Saumlaki,\n",
-       "   Pengumpan:Bebar,\n",
-       "   Pengumpan:Buano,\n",
-       "   Pengumpan:Amahai,\n",
-       "   Pengumpan:Kelimoi],\n",
-       "  'TL2': [Utama:Makassar,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpan:Adault/Lingat,\n",
-       "   Pengumpan:Fadol,\n",
-       "   Pengumpan:Tabarfane,\n",
-       "   Pengumpan:Elat,\n",
-       "   Pengumpan:Tepa,\n",
-       "   Pengumpan:P.Manawoka,\n",
-       "   Pengumpan:Lelam Kojabi,\n",
-       "   Pengumpan:Bebar,\n",
-       "   Pengumpan:Arwala/Sutilirang,\n",
-       "   Pengumpan:Toyando,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpan:Mangur,\n",
-       "   Pengumpan:Mun,\n",
-       "   Pengumpul:Saumlaki,\n",
-       "   Pengumpan:Longgar,\n",
-       "   Pengumpan:Kroing,\n",
-       "   Pengumpan:Molu,\n",
-       "   Pengumpan:Weduar,\n",
-       "   Pengumpul:Kisar,\n",
-       "   Pengumpan:Banda Eli,\n",
-       "   Pengumpan:Teon,\n",
-       "   Pengumpul:Namlea,\n",
-       "   Pengumpan:Gorom,\n",
-       "   Pengumpul:Banda Neira,\n",
-       "   Pengumpan:Kaimer,\n",
-       "   Pengumpan:Marsela,\n",
-       "   Pengumpan:Ilwaki,\n",
-       "   Pengumpan:Meror,\n",
-       "   Pengumpul:Moa,\n",
-       "   Pengumpul:Namrole,\n",
-       "   Pengumpul:Tual,\n",
-       "   Pengumpan:Jerol,\n",
-       "   Pengumpan:Marlasi,\n",
-       "   Pengumpul:Dobo],\n",
-       "  'PR_Ambon': [Pengumpul:Ambon,\n",
-       "   Pengumpan:Fogi,\n",
-       "   Pengumpan:Wahai,\n",
-       "   Pengumpan:Wamsisi,\n",
-       "   Pengumpan:Leksula,\n",
-       "   Pengumpan:Taniwel,\n",
-       "   Pengumpan:Bula,\n",
-       "   Pengumpan:Waemulang,\n",
-       "   Pengumpan:Manipa,\n",
-       "   Pengumpan:Werinama],\n",
-       "  'PL1': [Utama:Tanjung Priok,\n",
-       "   Pengumpul:Banda Neira,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Utama:Tanjung Perak,\n",
-       "   Utama:Makassar,\n",
-       "   Pengumpul:Tual,\n",
-       "   Pengumpul:Saumlaki,\n",
-       "   Pengumpul:Ambon],\n",
-       "  'PR_Tual': [Pengumpul:Tual,\n",
-       "   Pengumpul:Dobo,\n",
-       "   Pengumpan:Kailakat,\n",
-       "   Pengumpan:P.Tior,\n",
-       "   Pengumpan:P.Kesui,\n",
-       "   Pengumpan:Kaisui,\n",
-       "   Pengumpan:Benjina,\n",
-       "   Pengumpan:P.Kur,\n",
-       "   Pengumpan:Holat,\n",
-       "   Pengumpan:Tam],\n",
-       "  'PR_Saumlaki': [Pengumpul:Saumlaki,\n",
-       "   Pengumpan:Sofyanin/Rumayaan,\n",
-       "   Pengumpan:Serua,\n",
-       "   Pengumpan:Rumean,\n",
-       "   Pengumpan:Lelang,\n",
-       "   Pengumpan:Wulur,\n",
-       "   Pengumpan:P.Luang,\n",
-       "   Pengumpan:Nila,\n",
-       "   Pengumpan:P.Leti,\n",
-       "   Pengumpan:Lakor,\n",
-       "   Pengumpan:Larat,\n",
-       "   Pengumpan:Eray,\n",
-       "   Pengumpan:Seira,\n",
-       "   Pengumpan:Tutukembong,\n",
-       "   Pengumpan:Romang,\n",
-       "   Pengumpan:Nurkat,\n",
-       "   Pengumpan:Dawera/Dawelor,\n",
-       "   Pengumpan:Lewa/Dai,\n",
-       "   Pengumpan:Wunlah,\n",
-       "   Pengumpan:Kisar1]}]"
+       "{'TL1': [Utama:Tanjung Perak,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpul:Namlea,\n",
+       "  Pengumpan:Ambalau,\n",
+       "  Pengumpan:Adault/Lingat,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpul:Kisar,\n",
+       "  Pengumpan:Kobisadar,\n",
+       "  Pengumpan:Kelang,\n",
+       "  Pengumpan:Kelimuri,\n",
+       "  Pengumpan:Kelimoi,\n",
+       "  Pengumpan:Tepa,\n",
+       "  Pengumpul:Namrole,\n",
+       "  Pengumpan:Teon,\n",
+       "  Pengumpan:Bebar,\n",
+       "  Pengumpul:Namlea,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpul:Ambon,\n",
+       "  Pengumpan:Tifu,\n",
+       "  Pengumpan:Buano,\n",
+       "  Pengumpan:P.Geser,\n",
+       "  Pengumpan:Ilwaki,\n",
+       "  Pengumpan:Marsela,\n",
+       "  Pengumpan:Molu,\n",
+       "  Pengumpul:Namrole,\n",
+       "  Pengumpul:Saumlaki,\n",
+       "  Pengumpan:Kroing,\n",
+       "  Pengumpan:Arwala/Sutilirang,\n",
+       "  Pengumpul:Kisar,\n",
+       "  Pengumpan:Amahai],\n",
+       " 'TL2': [Utama:Makassar,\n",
+       "  Pengumpan:Meror,\n",
+       "  Pengumpan:Ilwaki,\n",
+       "  Pengumpan:Arwala/Sutilirang,\n",
+       "  Pengumpan:Adault/Lingat,\n",
+       "  Pengumpan:P.Manawoka,\n",
+       "  Pengumpan:Tabarfane,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpan:Gorom,\n",
+       "  Pengumpan:Longgar,\n",
+       "  Pengumpan:Tepa,\n",
+       "  Pengumpul:Kisar,\n",
+       "  Pengumpan:Marsela,\n",
+       "  Pengumpan:Jerol,\n",
+       "  Pengumpul:Namrole,\n",
+       "  Pengumpan:Teon,\n",
+       "  Pengumpan:Mun,\n",
+       "  Pengumpan:Toyando,\n",
+       "  Pengumpan:Elat,\n",
+       "  Pengumpan:Mangur,\n",
+       "  Pengumpan:Bebar,\n",
+       "  Pengumpan:Banda Eli,\n",
+       "  Pengumpan:Kroing,\n",
+       "  Pengumpul:Saumlaki,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpan:Kaimer,\n",
+       "  Pengumpan:Weduar,\n",
+       "  Pengumpan:Lelam Kojabi,\n",
+       "  Pengumpul:Tual,\n",
+       "  Pengumpan:Fadol,\n",
+       "  Pengumpul:Namlea,\n",
+       "  Pengumpul:Kisar,\n",
+       "  Pengumpul:Moa,\n",
+       "  Pengumpul:Banda Neira,\n",
+       "  Pengumpan:Molu,\n",
+       "  Pengumpan:Marlasi],\n",
+       " 'PR_Ambon': [Pengumpul:Ambon,\n",
+       "  Pengumpan:Werinama,\n",
+       "  Pengumpan:Waemulang,\n",
+       "  Pengumpan:Leksula,\n",
+       "  Pengumpan:Bula,\n",
+       "  Pengumpan:Wamsisi,\n",
+       "  Pengumpan:Wahai,\n",
+       "  Pengumpan:Fogi,\n",
+       "  Pengumpan:Taniwel,\n",
+       "  Pengumpan:Manipa],\n",
+       " 'PL1': [Utama:Tanjung Priok,\n",
+       "  Pengumpul:Tual,\n",
+       "  Utama:Tanjung Perak,\n",
+       "  Pengumpul:Banda Neira,\n",
+       "  Pengumpul:Dobo,\n",
+       "  Pengumpul:Ambon,\n",
+       "  Pengumpul:Saumlaki,\n",
+       "  Utama:Makassar],\n",
+       " 'PR_Tual': [Pengumpul:Tual,\n",
+       "  Pengumpan:Holat,\n",
+       "  Pengumpan:Kailakat,\n",
+       "  Pengumpan:Benjina,\n",
+       "  Pengumpan:Kaisui,\n",
+       "  Pengumpan:P.Tior,\n",
+       "  Pengumpan:Tam,\n",
+       "  Pengumpan:P.Kesui,\n",
+       "  Pengumpan:P.Kur,\n",
+       "  Pengumpul:Dobo],\n",
+       " 'PR_Saumlaki': [Pengumpul:Saumlaki,\n",
+       "  Pengumpan:Eray,\n",
+       "  Pengumpan:Wunlah,\n",
+       "  Pengumpan:Sofyanin/Rumayaan,\n",
+       "  Pengumpan:Serua,\n",
+       "  Pengumpan:Nila,\n",
+       "  Pengumpan:Lelang,\n",
+       "  Pengumpan:Kisar1,\n",
+       "  Pengumpan:Lakor,\n",
+       "  Pengumpan:Nurkat,\n",
+       "  Pengumpan:P.Leti,\n",
+       "  Pengumpan:Tutukembong,\n",
+       "  Pengumpan:Seira,\n",
+       "  Pengumpan:Wulur,\n",
+       "  Pengumpan:Lewa/Dai,\n",
+       "  Pengumpan:Larat,\n",
+       "  Pengumpan:Dawera/Dawelor,\n",
+       "  Pengumpan:P.Luang,\n",
+       "  Pengumpan:Rumean,\n",
+       "  Pengumpan:Romang]}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nextgen' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-65-e473060ffc56>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnextgen\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'nextgen' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "nextgen"
+    "read_dictionary = np.load('best_routes.npy',allow_pickle='TRUE').item()\n",
+    "read_dictionary"
    ]
   },
   {
